force-app/main/default/objects/PGi_Vendor_List__c/PGi_Vendor_List__c.object-meta.xml
<CustomObject>
    <description>List of PGi Vendors, including carriers and 3rd Party vendors</description>
    <label>PGi Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGi Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>