force-app/main/default/objects/PGi_Vendor_List__c/fields/Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notes__c</fullName>
    <label>Escalation Notes</label>
    <type>TextArea</type>
</CustomField>