force-app/main/default/objects/PGi_Vendor_List__c/fields/Show_on_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Surveys</label>
    <type>Checkbox</type>
</CustomField>