force-app/main/default/objects/PGi_Vendor_List__c/recordTypes/Telco_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Telco_Vendor</fullName>
    <active>true</active>
    <label>Telco Vendor</label>
</RecordType>