force-app/main/default/objects/PGi_Vendor_List__c/recordTypes/UCaaS_Distributor.recordType-meta.xml
<RecordType>
    <fullName>UCaaS_Distributor</fullName>
    <active>true</active>
    <label>UCaaS Distributor</label>
</RecordType>