force-app/main/default/objects/PGi_Vendor_List__c/listViews/Active_Vendors.listView-meta.xml
<ListView>
    <fullName>Active_Vendors</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Show_on_Surveys__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Vendors</label>
    <language>en_US</language>
</ListView>