force-app/main/default/objects/PGi_Vendor_List__c/listViews/UCaaS_Distributors.listView-meta.xml
<ListView>
    <fullName>UCaaS_Distributors</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Escalation_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PGi_Vendor_List__c.UCaaS_Distributor</value>
    </filters>
    <label>UCaaS Distributors</label>
    <language>en_US</language>
</ListView>