force-app/main/default/objects/PGi_Vendor_List__c/listViews/Vendors_to_Show_on_Surveys.listView-meta.xml
<ListView>
    <fullName>Vendors_to_Show_on_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Show_on_Surveys__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_on_Surveys__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vendors to Show on Surveys</label>
    <language>en_US</language>
</ListView>